# razerblade-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md  SKILL.md  razer_ipc.h  razerctl.1  razerctl.c  razerctld.c  razerctld.service  zz-razerctld-resume
sniff/: capture.ps1
